# Tredence

./: .env.example  .gitignore  ARCHITECTURE.md  COMPLETION_STATUS.md  DOCKER_DEPLOYMENT.md  Dockerfile  ENHANCEMENTS_COMPLETED.md  FINAL_SUMMARY.md  FRONTEND_IMPLEMENTATION.md  FUTURE_ENHANCEMENTS.md  GIT_COMMIT_STRATEGY.md  PHASE1_VALIDATION.md  PHASE2_VALIDATION.md  PROJECT_PHASES.md  PROJECT_STATUS.md  QUICKSTART.md  README.md  REQUIREMENTS_CHECKLIST.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.bat  setup.sh  test_input.py  test_phase2_success_criteria.py
.github/workflows/: ci.yml  codeql.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
app/: __init__.py  config.py  main.py
app/api/: models.py
app/core/: edge.py  engine.py  graph.py  node.py  registry.py  state.py
app/database/: connection.py  models.py  repositories.py
app/llm/: __init__.py  client.py
app/utils/: exceptions.py
app/websocket/: __init__.py  manager.py  messages.py
app/workflows/: __init__.py
docs/: PHASE3_VALIDATION.md
examples/: demo_complexity_analysis.py  demo_llm_review.py
frontend/: QUICKSTART.md  README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
scripts/: seed_database.py
tests/: conftest.py
tests/test_api/: conftest.py  test_background_execution.py  test_error_scenarios.py  test_graph_routes.py  test_websocket.py
tests/test_core/: test_edge.py  test_engine.py  test_graph.py  test_node.py  test_registry.py  test_state.py
tests/test_llm/: __init__.py  (+1 more)
(+24 files in other folders)
